cmake_minimum_required(VERSION 3.17)
project(cherno)

set(CMAKE_CXX_STANDARD 17)

add_executable(cherno main.cpp src/leetcode/ReverseMatric.cpp src/leetcode/ReverseMatric.h src/leetcode/MinestDiffTime.cpp src/leetcode/MinestDiffTime.h src/algorithm/DFS.cpp src/algorithm/DFS.h src/leetcode/Break2Fibonacci.cpp src/leetcode/Break2Fibonacci.h src/leetcode/UniquePaths.cpp src/leetcode/UniquePaths.h src/leetcode/BrowserHistory.cpp src/leetcode/BrowserHistory.h src/leetcode/Change.cpp src/leetcode/Change.h src/algorithm/RegEx.cpp src/algorithm/RegEx.h src/leetcode/Senate.cpp src/leetcode/Senate.h src/leetcode/DiagonalOrder.cpp src/leetcode/DiagonalOrder.h src/algorithm/DP.cpp src/algorithm/DP.h)